# bcg729

./: .gitignore  .gitlab-ci.yml  AUTHORS  AUTHORS.md  Android.mk  BCG729Config.cmake.in  Bcg729Config.cmake  Bcg729Config.cmake.in  CHANGELOG.md  CMakeLists.txt  Makefile.am  NEWS  README  README.md  autogen.sh  bcg729.spec.in  config.h.cmake  configure.ac  libbcg729.pc.in
debian/: changelog  control  copyright  libbcg729-0-dbg.lintian-overrides  libbcg729-0.lintian-overrides  libbcg729-0.symbols  libbcg729-dev.lintian-overrides  mediastreamer-plugin-g729-dbg.lintian-overrides  mediastreamer-plugin-g729.install  mediastreamer-plugin-g729.lintian-overrides  rules
debian/patches/: build-only-nonversioned-shared-version-of-plugin.patch  enable-subdir-objects.patch  install-codec-library-normally.patch  remove-lib-prefix-from-plugin.patch  series
debian/source/: source.lintian-overrides  watch
include/: CMakeLists.txt  LP2LSPConversion.h  LPSynthesisFilter.h  LSPQuantization.h  Makefile.am  basicOperationsMacros.h  codebooks.h  codecParameters.h  computeAdaptativeCodebookGain.h  computeLP.h  computeWeightedSpeech.h  decodeAdaptativeCodeVector.h  decodeFixedCodeVector.h  decodeLSP.h  findOpenLoopPitchDelay.h  fixedCodebookSearch.h  fixedPointMacros.h  floatingPointMacros.h  g729FixedPointMath.h  gainQuantization.h  interpolateqLSP.h  postFilter.h  preProcessing.h  typedef.h  utils.h
include/bcg729/: Makefile.am  decoder.h  encoder.h
msbcg729/: Android.mk  CMakeLists.txt  Makefile.am  bcg729_dec.c  bcg729_enc.c
src/: CMakeLists.txt  LP2LSPConversion.c  LP2LSPConversion.h  LPSynthesisFilter.c  LPSynthesisFilter.h  LSPQuantization.c  LSPQuantization.h  Makefile.am  adaptativeCodebookSearch.c  adaptativeCodebookSearch.h  basicOperationsMacros.h  cng.c  cng.h  codebooks.c  codebooks.h  codecParameters.h  computeAdaptativeCodebookGain.c  computeAdaptativeCodebookGain.h  computeLP.c  computeLP.h  computeWeightedSpeech.c  computeWeightedSpeech.h  decodeAdaptativeCodeVector.c  decodeAdaptativeCodeVector.h  decodeFixedCodeVector.c  decodeFixedCodeVector.h  decodeGains.c  decodeGains.h  decodeLSP.c  decodeLSP.h  decoder.c  dtx.c  dtx.h  encoder.c  findOpenLoopPitchDelay.c  findOpenLoopPitchDelay.h  fixedCodebookSearch.c  fixedCodebookSearch.h  fixedPointMacros.h  floatingPointMacros.h  (+18 more)
test/: CMakeLists.txt  Makefile.am  testCampaign  testCampaignAll  testCampaignAll.cmake
test/src/: CNGRFC3389decoderTest.c  CNGdecoderTest.c  LP2LSPConversionTest.c  LPSynthesisFilterTest.c  LSPQuantizationTest.c  VADTest.c  adaptativeCodebookSearchTest.c  computeAdaptativeCodebookGainTest.c  computeLPTest.c  computeNoiseExcitationTest.c  computeWeightedSpeechTest.c  decodeAdaptativeCodeVectorTest.c  decodeFixedCodeVectorTest.c  decodeGainsTest.c  decodeLSPTest.c  decoderMultiChannelTest.c  decoderTest.c  encoderMultiChannelTest.c  encoderTest.c  encoderVADTest.c  findOpenLoopPitchDelayTest.c  fixedCodebookSearchTest.c  g729FixedPointMathTest.c  gainQuantizationTest.c  interpolateqLSPAndConvert2LPTest.c  postFilterTest.c  postProcessingTest.c  preProcessingTest.c  testUtils.c  testUtils.h
