SUBDIRS = bcg729

include_HEADERS= adaptativeCodebookSearch.h \
		basicOperationsMacros.h \
		codebooks.h \
		codecParameters.h \
		computeAdaptativeCodebookGain.h \
		computeLP.h \
		computeWeightedSpeech.h \
		decodeAdaptativeCodeVector.h \
		decodeFixedCodeVector.h \
		decodeGains.h \
		decodeLSP.h \
		findOpenLoopPitchDelay.h \
		fixedCodebookSearch.h \
		fixedPointMacros.h \
		floatingPointMacros.h \
		g729FixedPointMath.h \
		gainQuantization.h \
		interpolateqLSP.h \
		LP2LSPConversion.h \
		LPSynthesisFilter.h \
		LSPQuantization.h \
		postFilter.h \
		postProcessing.h \
		preProcessing.h \
		qLSP2LP.h \
		typedef.h \
		utils.h 

EXTRA_DIST=$(include_HEADERS)
