lib_LTLIBRARIES = libbcg729.la

libbcg729_la_SOURCES=	LP2LSPConversion.c \
			LPSynthesisFilter.c \
			LSPQuantization.c \
			adaptativeCodebookSearch.c \
			codebooks.c \
			computeAdaptativeCodebookGain.c \
			computeLP.c \
			computeWeightedSpeech.c \
			decodeAdaptativeCodeVector.c \
			decodeFixedCodeVector.c \
			decodeGains.c \
			decodeLSP.c \
			decoder.c \
			encoder.c \
			findOpenLoopPitchDelay.c \
			fixedCodebookSearch.c \
			gainQuantization.c \
			interpolateqLSP.c \
			postFilter.c \
			postProcessing.c \
			preProcessing.c \
			qLSP2LP.c \
			utils.c

libbcg729_la_LDFLAGS=-fvisibility=hidden

INCLUDES= -I$(top_srcdir)/include


